--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -15,16 +15,16 @@
 <link rel='import' href='../../dialog/aq-delete-dialog.html'>
 <link rel="import" href="strategy-item.html">
 <dom-module id="aq-analyze-home">
-	
+
 	<style  include="iron-flex iron-flex-alignment iron-positioning">
 	</style>
-  
+
 	<style>
-		
+
 		#container {
 			margin:0 auto;
 		    margin-top: 0px;
-		    color: #24293d; 
+		    color: #24293d;
 	  	}
 		.backtest-item{
 			width: 95%;
@@ -38,7 +38,7 @@
 		#comparison {
 			margin:20px;
 			--height:400px;
-		}	
+		}
 
 		p{
 			font-size: 20px;
@@ -47,14 +47,17 @@
 		.spacer {
 			margin-bottom: 13px;
 			height:0px;
-			min-width: 500px; 		
+			min-width: 500px;
 		}
-
+		.layout{
+			position: relative;
+			top:70px;
+		}
 	</style>
 
 	<template>
 
-		<iron-ajax	
+		<iron-ajax
           	url="[[computeGetStrategyUrl(strategyId)]]"
      	 	method='GET'
           	id='getStrategyQuery'
@@ -76,7 +79,7 @@
           	debounce-duration="500"
           	loading='{{backtestLoading}}'>
         </iron-ajax>
-		
+
 		<iron-ajax
           	url="[[computeDeleteBacktestUrl(deleteId)]]"
      	 	method='DELETE'
@@ -89,7 +92,7 @@
         </iron-ajax>
 
         <aq-check-authentication id='authItem'></aq-check-authentication>
-		
+
 	 	<iron-signals on-iron-signal-backtest-added='onBacktestAdded'></iron-signals>
 
 	 	<iron-signals on-iron-signal-backtest-completed='onBacktestCompleted'></iron-signals>
@@ -97,11 +100,11 @@
 	 	<iron-signals on-iron-signal-dirtybit='onSetDirtyBit'></iron-signals>
 
 		<aq-loading-progress loading='{{isLoading(strategyLoading, backtestLoading)}}'></aq-loading-progress>
+        <aq-analyze-home-menu check-all="{{checkAll}}" num-active-backtests="[[checkedCount]]" strategy-name="{{strategyName}}"></aq-analyze-home-menu>
 
-    	<template is='dom-if' if='{{!isLoading(strategyLoading, backtestLoading)}}'>
+        <template is='dom-if' if='{{!isLoading(strategyLoading, backtestLoading)}}'>
 			<div id='container'>
 				<template is='dom-if' if="[[!showComparison]]">
-					<aq-analyze-home-menu check-all="{{checkAll}}" num-active-backtests="[[checkedCount]]" strategy-name="{{strategyName}}"></aq-analyze-home-menu>
 
 					<!--<p>All Backtests for <i>{{strategyName}}</i></p>-->
 					<div class="layout horizontal wrap flex around-justified itemcontainer" >
@@ -120,10 +123,10 @@
 					</aq-analyze-backtest-comparison-item>
 				</template>
 
-			</div>	
+			</div>
 
 		    <aq-delete-dialog id ="deleteDialog" heading="Delete Backtests"
-				 message="Are you sure to delete [[checkedCount]] backtest[[getMessageSuffix(checkedCount)]]?"	
+				 message="Are you sure to delete [[checkedCount]] backtest[[getMessageSuffix(checkedCount)]]?"
 				 cancel="Cancel"
 				 accept="OK">
 	    	</aq-delete-dialog>
@@ -189,7 +192,7 @@
                     value:false
                 }
 
-    		}, 
+    		},
             ready:function () {
                 if(this.checkedCount == 0){
                     this.checkAll = false;
@@ -207,7 +210,7 @@
 			},
 
 			_strategyIdChanged: function(nId, oId) {
-				
+
 				if(nId && nId!= "") {
 					this.fetchBacktests();
 	        	}
@@ -224,12 +227,12 @@
          	 		this.fire('rt-changed',{route:'/user/signin'});
 	          		return;
 	          	} else {
-	          		
+
 					this.set('backtests', []);
 	        		this.header = this.$.authItem.getHeader();
         			this.$.getStrategyQuery.generateRequest();
         			this.dirtyBit = 0;
-	        	
+
 	        	}
 			},
 
@@ -259,7 +262,7 @@
 			isBacktestCountOdd: function(backtests) {
 				return backtests.length % 2 == 1;
 			},
-			
+
 			onGetAllBacktestsForStrategy: function(data) {
 				this.backtests = data.detail.response;
 				this.dirtyBit = 0;
@@ -308,7 +311,7 @@
 	        	e.stopPropagation();
 	        	//Send DELETE request to backend
 	        	for (key in this.checkedItems) {
-	        		for (i in this.backtests) {		
+	        		for (i in this.backtests) {
 	        			if (key == this.backtests[i]._id && this.checkedItems[key]==true) {
 	        				this.deleteId = this.backtests[i]._id;
 	        				this.$.deleteBacktestQuery.generateRequest();
@@ -322,7 +325,7 @@
 
 	        onDeleteBacktestForStrategySuccess: function(data) {
 	        	var deleteId = data.detail.response.id;
-	        	for (i in this.backtests) {		
+	        	for (i in this.backtests) {
         			if (deleteId == this.backtests[i]._id) {
         				this.splice('backtests', i, 1);
         				this.checkedCount -= 1;
@@ -335,14 +338,14 @@
 	        },
 
 	        onDeleteBacktestForStrategyError: function(data) {
-	        }, 
+	        },
 
 	        toggleComparison: function() {
 	        	this.showComparison = !this.showComparison;
 	        },
 
-	        onDetail: function(e) {  
-	        	e.stopPropagation();    
+	        onDetail: function(e) {
+	        	e.stopPropagation();
 	        	this.fire('rt-changed', {route:'/dashboard/analyze/' + this.strategyId+'/'+ e.detail.id});
 	        },
 
