--- a/src/components/common/aq-sub-toolbar.html
+++ b/src/components/common/aq-sub-toolbar.html
@@ -22,10 +22,12 @@
                 box-shadow:0 4px 8px rgba(0,0,0,0.2);
                 display: flex;
                 align-items: center;
+                position: fixed;
+                z-index: 20;
             }
 
             ::content #menu-icons {
-                position:absolute;
+                position:fixed;
                 right:20px;
             }
 
