--- a/src/components/editor/aq-editor-home-menu.html
+++ b/src/components/editor/aq-editor-home-menu.html
@@ -39,6 +39,8 @@
             display: flex;
             align-items: center;
             margin-bottom: 20px;
+            margin-top: 70px;
+            position: relative;
         }
 
         paper-button {
