--- a/src/components/analyze/aq-analyze-detail.html
+++ b/src/components/analyze/aq-analyze-detail.html
@@ -32,6 +32,10 @@
 			margin:auto 0;
 			outline: none !important;
 		}
+        p{
+            padding: 0;
+            margin: 0;
+        }
   	</style>
 
 	<template>
