Modified Community section

--- a/src/components/common/aq-backtest-detail-item.html
+++ b/src/components/common/aq-backtest-detail-item.html
@@ -263,9 +263,9 @@
 
                     <paper-tabs noink selected="{{graphType}}">
                         <paper-tab>Cumulative Return</paper-tab>
-                        <template is='dom-if' if='[[!active]]'>
+                        <!--<template is='dom-if' if='[[!active]]'>-->
                             <paper-tab>Monthly Returns</paper-tab>
-                        </template>
+                        <!--</template>-->
                     </paper-tabs>
 
                 </div>
