Modified Community section

--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -76,7 +76,6 @@
             max-width: 350px;
             font-size: 16px;
             margin: 0 auto;
-            margin-top: 20px;
             border-bottom: 1px solid #e5e5e5;
             --paper-tabs-selection-bar-color: teal;
         !important;
@@ -101,7 +100,7 @@
         }
 
         aq-community-home-post-item2 {
-            width: 800px;
+            width: 100%;
             margin: 0 auto;
         }
 
@@ -122,7 +121,6 @@
             flex-direction: row;
             position: relative;
             top: 30px;
-            margin: 0 auto;
         }
 
         .list-container {
@@ -132,6 +130,10 @@
         }
         ul{
             list-style: none;
+        }
+        .announcement-container{
+            position: relative;
+            top:18px;
         }
     </style>
     <template>
