--- a/src/components/common/announcement-card.html
+++ b/src/components/common/announcement-card.html
@@ -26,6 +26,7 @@
                 font-weight: 700;
                 font-size: 16px;
                 margin-top: 13px;
+                color:#474747;
             }
             ::content span{
                 font-family: 'Lato' , sans-serif;
@@ -34,6 +35,7 @@
                 margin: 0; padding: 0;
                 margin-top: 13px;
                 font-weight: 400;
+                color:#686868;
             }
             h1,h3{
                 margin: 0;padding: 0;
