--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -114,6 +114,7 @@
 
         announcement-card {
             --announcement-card-width: 300px;
+            margin-bottom: 30px;
         }
 
         .main-container {
@@ -127,6 +128,7 @@
             display: flex;
             flex-direction: column;
             margin-right: 60px;
+            width: 100%;
         }
         ul{
             list-style: none;
@@ -134,6 +136,60 @@
         .announcement-container{
             position: relative;
             top:18px;
+            display: flex;
+            flex-direction: column;
+        }
+        .flex{
+            width: 20%;
+        }
+        #searchbox,#searchbox1 {
+            height: 32px;
+            -webkit-appearance: none;
+            line-height: 46px;
+            border: 0;
+            margin: 0;
+            padding-left: 30px;
+            border: 1px solid #e5e5e5;
+            @apply(--paper-font-body1);
+            font-size: 14px;
+            background-color: #fff;
+            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+            transition: all 0.4s ease-in-out;
+            display: inline-block;
+        }
+
+        #searchbox:focus, #searchbox1:focus{
+            outline: 0;
+            background-color: #f7f7f7;
+        }
+
+        #searchbox::-webkit-search-cancel-button,#searchbox1::-webkit-search-cancel-button {
+            position: relative;
+            right: 15px;
+        }
+
+        .search-bar {
+            width: 45%;
+            margin: 0 auto;
+            display: flex;
+            align-items: center;
+            position: relative;
+        }
+        paper-button{
+            border:none;
+        }
+        .upper-container{
+            display: flex;
+            flex-direction: row;
+        }
+        .search-btn{
+            border: none;
+            font-size: 13px;
+            background-color: teal;
+            color: #fff;
+            padding: 0 20px;
+            border-radius: 2px;
+            height: 35px;
         }
     </style>
     <template>
@@ -160,22 +216,34 @@
         <aq-loading-progress loading='{{loading}}'></aq-loading-progress>
 
         <div id='container' class="layout vertical flex">
-
-            <div class="layout horizontal wrap">
-                <div id="header">
-                    <p> AimsQuant Community</p>
-                    <i style="margin-bottom:50px; color:teal;">Share, Learn and Code</i>
+            <div class="upper-container">
+                <div class="search-bar">
+                    <input id="searchbox"  placeholder="Search Term" class="flex"
+                           value="{{searchText::change}}"
+                           on-keydown="checkForKeys" on-blur='blur'>
                 </div>
-
-                <div class="flex"></div>
-
-                <aq-community-home-searchbar id='searchbar'
-                                             class="self-end"
-                                             active="[[isSearchActive(searchText)]]"
-                                             search-value="[[searchText]]">
-                </aq-community-home-searchbar>
-
+                <div class="search-bar">
+                    <input id="searchbox1" placeholder="Tags" class="flex"
+                           value="{{searchText::change}}"
+                           on-keydown="checkForKeys" on-blur='blur'>
+                </div>
+                <paper-button raised class="btn search-btn" on-tap="search">Search</paper-button>
             </div>
+            <!--<div class="layout horizontal wrap">-->
+                <!--<div id="header">-->
+                    <!--<p> AimsQuant Community</p>-->
+                    <!--<i style="margin-bottom:50px; color:teal;">Share, Learn and Code</i>-->
+                <!--</div>-->
+
+                <!--<div class="flex"></div>-->
+
+                <!--<aq-community-home-searchbar id='searchbar'-->
+                                             <!--class="self-end"-->
+                                             <!--active="[[isSearchActive(searchText)]]"-->
+                                             <!--search-value="[[searchText]]">-->
+                <!--</aq-community-home-searchbar>-->
+
+            <!--</div>-->
 
             <template is='dom-if' if='[[isSearchActive(searchText, searchCategory)]]'>
                 <p style="font-size: 16px;"><i>Search results for "[[searchText]]"&nbsp</i> in Category: <i>"[[searchCategory]]"</i>
@@ -198,6 +266,18 @@
                     </template>
                 </ul>
                 <div class="announcement-container">
+                    <announcement-card header="Important Announcement"
+                                       sub-header="This is a very important announcement">
+                    <span>
+                        It is a long established fact that a reader will be distracted by the readable content of a page when
+                        looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
+                        of letters, as opposed to using 'Content here, content here', making it look like readable English. Many
+                        desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a
+                        search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have
+                        evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+                    </span>
+                    </announcement-card>
+
                     <announcement-card header="Important Announcement"
                                        sub-header="This is a very important announcement">
                     <span>
